# email-agent

./: .dockerignore  .envrc  .gitignore  Dockerfile  README.md  justfile  pyproject.toml
email_agent/: config.py  main.py
email_agent/agent/: graph.py  nodes.py  state.py
email_agent/models/: gmail.py  ingest.py  request.py
email_agent/prompts/: image_description.txt  relevence_prompt.txt  system_prompt.txt
email_agent/routes/: __init__.py  agent_router.py  ingest_router.py  watch_router.py
email_agent/services/: attachments.py  firestore.py  gmail.py  ingestion.py  llm.py
email_agent/tools/: vector_search.py
email_agent/utils/: logger.py  utils.py
iac/app/: backend.tf  iam.tf  main.tf  outputs.tf  provider.tf  variables.tf  vector_search.tf
iac/base/: backend.tf  main.tf  outputs.tf  variables.tf
rag_docs/: 01_product.txt  02_product.txt  03_product.txt
scripts/: oauth_token.py
